--- a/OOPT4Project/OOPT4Project.csproj
+++ b/OOPT4Project/OOPT4Project.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="SkiaSharp.Views.WPF" Version="2.80.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
