fix: Tests according to file structure

--- a/OOPT4Project.Tests/OOPT4Project.Tests.csproj
+++ b/OOPT4Project.Tests/OOPT4Project.Tests.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\OOPT4Project\OOPT4Project.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extension\" />
+  </ItemGroup>
+
 </Project>
