fix: getting rid of prism

--- a/OOPT4Project.Tests/OOPT4Project.Tests.csproj
+++ b/OOPT4Project.Tests/OOPT4Project.Tests.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <Folder Include="Extension\" />
+    <Folder Include="Simulation\Creature\Behavior\Conflict\" />
+    <Folder Include="Simulation\Creature\Gene\" />
   </ItemGroup>
 
 </Project>
